feature：Java GC